--- a/FroalaBugs/src/index.html
+++ b/FroalaBugs/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=format_bold,format_italic,format_list_bulleted,format_list_numbered,format_underlined,question_mark" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
